--- a/model_files/UMSSM/FlexibleSUSY.m.in
+++ b/model_files/UMSSM/FlexibleSUSY.m.in
@@ -89,3 +89,15 @@ DefaultPoleMassPrecision = MediumPrecision;
 HighPoleMassPrecision    = {hh, Ah, Hpm};
 MediumPoleMassPrecision  = {};
 LowPoleMassPrecision     = {};
+
+(* Workaround:  SARAH 4.5.8 defines Z-Z' angle as
+
+     {ThetaWp, { Description -> "Theta'", DependenceNum -> None }},
+
+   However, we currently need its analytic expression in terms
+   of MAh and MZ.
+ *)
+SARAH`ParameterDefinitions = Append[
+    Cases[SARAH`ParameterDefinitions, {p_ /; p =!= ThetaWp, ___}],
+    {ThetaWp, { Description -> "Theta'", DependenceNum -> 0 }}
+];
