--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -57,6 +57,8 @@ FFLAGS             := @FFLAGS@
 FLIBS              := @FLIBS@
 FOR_DEP_GEN        := @FOR_DEP_GEN@
 MAKELIB            := @MAKELIB@
+LDFLAGS            := @LDFLAGS@
+LDLIBS             := @LDLIBS@
 LIBEXT             := @LIBEXT@
 BLASLIBS           := @BLASLIBS@
 BOOSTTESTLIBS      := @BOOSTTESTLIBS@
@@ -229,6 +231,8 @@ showbuild:
 	@echo "FLIBS              = $(FLIBS)"
 	@echo "FOR_DEP_GEN        = $(FOR_DEP_GEN)"
 	@echo "MAKELIB            = $(MAKELIB)"
+	@echo "LDFLAGS            = $(LDFLAGS)"
+	@echo "LDLIBS             = $(LDLIBS)"
 	@echo "LIBEXT             = $(LIBEXT)"
 	@echo "BLASLIBS           = $(BLASLIBS)"
 	@echo "BOOSTTESTLIBS      = $(BOOSTTESTLIBS)"
