make input scale for lambda in the SM a free parameter

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -7,11 +7,13 @@ FSDefaultSARAHModel = SM;
 
 MINPAR = { {1, LambdaIN} };
 
+EXTPAR = { {0, Qin} };
+
 EWSBOutputParameters = { mu2 };
 
-SUSYScale = v;
+SUSYScale = Qin;
 
-SUSYScaleFirstGuess = 1000;
+SUSYScaleFirstGuess = Qin;
 
 SUSYScaleInput = {
     {\[Lambda], LambdaIN}
