--- a/templates/weinberg_angle.hpp.in
+++ b/templates/weinberg_angle.hpp.in
@@ -21,9 +21,58 @@
 #ifndef @ModelName@_WEINBERG_ANGLE_H
 #define @ModelName@_WEINBERG_ANGLE_H
 
-#include @HalloOma@
+#include "@ModelName@_two_scale_model.hpp"
 
 namespace flexiblesusy {
+
+/**
+ * @class @ModelName@_weinberg_angle
+ * @brief Class to calculate the DR-bar weak mixing angle from pointer to a model
+ */
+class @ModelName@_weinberg_angle {
+public:
+   /**
+    * @class Sm_parameters
+    * @brief SM parameters necessary for calculating the weak mixing angle
+    * -> are extracted from a QedQcd object
+    */
+   struct Sm_parameters {
+      Sm_parameters();
+      double fermi_constant; ///< Fermi constant
+      double mw_pole;        ///< W pole mass
+      double mz_pole;        ///< Z pole mass
+      double mt_pole;        ///< top quark pole mass
+   };
+
+   @ModelName@_weinberg_angle(const @ModelName@<Two_scale>*, const Sm_parameters&);
+   ~@ModelName@_weinberg_angle();
+
+   void set_number_of_iterations(unsigned);  ///< maximum number of iterations
+   void set_number_of_loops(unsigned);       ///< set number of loops
+   void set_precision_goal(double);          ///< set precision goal
+   void set_model_pointer(const @ModelName@<Two_scale>*);  ///< set pointer to investigated model
+   void set_sm_parameters(const Sm_parameters&);  ///< set sm_parameters member variable
+
+   /// calculates and returns the sinus of the Weinberg angle
+   double calculate(double rho_start = 1.0, double sin_start = 0.48);
+
+private:
+   unsigned number_of_iterations; ///< maximum number of iterations
+   unsigned number_of_loops;      ///< number of loops
+   double precision_goal;         ///< precision goal
+   const @ModelName@<Two_scale>* model; ///< pointer to investigated model
+   Sm_parameters sm_parameters;   ///< SM parameters
+
+   double calculate_delta_rho(double, double);
+   double calculate_delta_r(double, double);
+   double calculate_delta_vb(double, double);
+   double calculate_delta_vb_sm(double, double);
+   double calculate_delta_vb_susy(double);
+   static double rho_2(double);
+
+   double calculate_self_energy_@VectorZ@_@TopQuark@(double, double);
+   double calculate_self_energy_@VectorW@_@TopQuark@(double, double);
+};
 
 } // namespace flexiblesusy
 
