Bugfix: read MODSEL block if SLHA input is passed via stdin

--- a/templates/slha_io.cpp.in
+++ b/templates/slha_io.cpp.in
@@ -204,6 +204,7 @@ void @ModelName@_slha_io::read_from_file(const std::string& file_name)
 void @ModelName@_slha_io::read_from_source(const std::string& source)
 {
    slha_io.read_from_source(source);
+   slha_io.read_modsel();
 }
 
 /**
