Bugfix: correcting trilinear input at Qin in the MSSM

--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -36,8 +36,8 @@ HighScaleFirstGuess = Qin;
 
 HighScaleInput = {
    {T[Ye], Aeij*Ye},
-   {T[Yd], Adij*Ye},
-   {T[Yu], Auij*Ye},
+   {T[Yd], Adij*Yd},
+   {T[Yu], Auij*Yu},
    {mHd2, mHd2IN},
    {mHu2, mHu2IN},
    {mq2, LHInput[mq2]},
