Bugfix: correcting trilinear input at Qin in the MSSMatMGUT

--- a/model_files/MSSMatMGUT/FlexibleSUSY.m.in
+++ b/model_files/MSSMatMGUT/FlexibleSUSY.m.in
@@ -35,8 +35,8 @@ HighScaleFirstGuess = 2.0 10^16;
 
 HighScaleInput = {
    {T[Ye], Aeij*Ye},
-   {T[Yd], Adij*Ye},
-   {T[Yu], Auij*Ye},
+   {T[Yd], Adij*Yd},
+   {T[Yu], Auij*Yu},
    {mHd2, mHd2IN},
    {mHu2, mHu2IN},
    {mq2, LHInput[mq2]},
