remove const from return type from method which uses return-by-value
This makes a difference in C++ 11 and 14 move semantics.

--- a/templates/two_scale_soft_parameters.cpp.in
+++ b/templates/two_scale_soft_parameters.cpp.in
@@ -70,7 +70,7 @@ void @ModelName@_soft_parameters::clear()
 @clearParameters@
 }
 
-const Eigen::ArrayXd @ModelName@_soft_parameters::get() const
+Eigen::ArrayXd @ModelName@_soft_parameters::get() const
 {
    Eigen::ArrayXd pars(@ModelName@_susy_parameters::get());
    pars.conservativeResize(numberOfParameters);
