--- a/templates/two_scale_susy_parameters.hpp.in
+++ b/templates/two_scale_susy_parameters.hpp.in
@@ -42,7 +42,7 @@ public:
    @ModelName@_susy_parameters(double scale_, double loops_, double thresholds_, const @ModelName@_input_parameters& input_@cCtorParameterList@);
    virtual ~@ModelName@_susy_parameters() {}
    virtual Eigen::ArrayXd beta() const;
-   virtual const Eigen::ArrayXd get() const;
+   virtual Eigen::ArrayXd get() const;
    virtual void print(std::ostream&) const;
    virtual void set(const Eigen::ArrayXd&);
    const @ModelName@_input_parameters& get_input() const;
