move check of non-perturbative parameters into separate function

--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -96,9 +96,17 @@ void @ModelName@_high_scale_constraint<Two_scale>::apply()
    update_scale();
 
 @applyConstraint@
-   {
+
+   check_non_perturbative();
+}
+
+bool @ModelName@_high_scale_constraint<Two_scale>::check_non_perturbative()
+{
+   bool problem = false;
+
 @checkPerturbativityForDimensionlessParameters@
-   }
+
+   return problem;
 }
 
 double @ModelName@_high_scale_constraint<Two_scale>::get_scale() const
